# fastapi-aiogram-template

./: .env  .gitignore  README.md  aerich.ini  pyproject.toml
app/: main.py
app/bot/: loader.py
app/bot/core/: middlewares.py
app/bot/handlers/: __init__.py  main.py
app/bot/keyboards/: inline.py  reply.py
app/core/: __init__.py  config.py
app/db/: models.py  schemas.py  shortcuts.py
app/routers/: api.py  authentication.py  deps.py  telegram.py
